feat: update new trademark

--- a/assets/components/hero.html
+++ b/assets/components/hero.html
@@ -1,7 +1,7 @@
 <div class="content">
-    <div class="static-title">Project IDX</div>
-    <h2>Powered by Nguyen Huu Tai</h2>
+    <div class="static-title">IDX Cluster</div>
+    <h2>Powered by IDX</h2>
     <div class="hacking-text">
-        Make your service with us! Contact us now at <a href="mailto:idx@projectidx.space">idx@projectidx.space</a>
+        Make your service with us! Contact us now at <a href="mailto:contact@idxcluster.com">contact@idxcluster.com</a>
     </div>
 </div>
