--- a/assets/components/sections/about.html
+++ b/assets/components/sections/about.html
@@ -10,7 +10,7 @@
             <div class="profile-name">IDX</div>
         </div>
         <div class="about-text">
-            <p>I am Nguyen Huu Tai and this is Project IDX, where I continuously develop and integrate personal technology products with the aim of embracing future technology in a unified, continuous manner without missing opportunities.</p>
+            <p>I am IDX and this is IDX Cluster, where I continuously develop and integrate personal technology products with the aim of embracing future technology in a unified, continuous manner without missing opportunities.</p>
             <p>With a passion for innovation and technological advancement, I strive to create solutions that push boundaries and explore new possibilities in the digital realm.</p>
         </div>
     </div>
