--- a/assets/components/header.html
+++ b/assets/components/header.html
@@ -1,6 +1,6 @@
 <header class="header">
     <div class="header-left">
-        <img src="./assets/imgs/branding/project-idx-logo.png" alt="Project IDX Logo" class="logo">
+        <img src="./assets/imgs/branding/project-idx-logo.png" alt="IDX Cluster Logo" class="logo">
     </div>
     <div class="header-center">
         <nav>
