chore: replace header/profile images with new branding logo

--- a/assets/components/sections/about.html
+++ b/assets/components/sections/about.html
@@ -2,7 +2,7 @@
     <h2 class="section-title">About Me</h2>
     <div class="about-container">
         <div class="profile-img-container">
-            <img src="./assets/imgs/profile/nguyen-huu-tai.jpg" alt="Nguyen Huu Tai" class="profile-img" loading="lazy">
+            <img src="./assets/imgs/branding/logo.png" alt="Nguyen Huu Tai" class="profile-img" loading="lazy">
             <div class="profile-img-overlay">
                 <div class="profile-img-particles"></div>
                 <div class="profile-img-glow"></div>
