--- a/assets/components/header.html
+++ b/assets/components/header.html
@@ -9,7 +9,7 @@
                 <li><a target="_blank" href="https://comic-machine.space">Comic Machine</a></li>
                 <li><a target="_blank" href="https://facebook.com/mortalhamster">Facebook</a></li>
                 <li><a target="_blank" href="https://n8n.projectidx.space">N8N Cloud</a></li>
-                <li><a target="_blank" href="https://status.projectidx.space">Status Center</a></li>
+                <li><a target="_blank" href="https://status.idxcluster.com">Status Center</a></li>
             </ul>
         </nav>
     </div>
